# zephyr-embedded-framework

./: README.md
project/: CMakeLists.txt  prj.conf
project/include/app/: actuator.h  app_bus.h  app_msg.h  comms_ble.h
project/src/: actuator.c  controller.c  main.c
project/src/bus/: app_bus.c
project/src/modules/comms/: comms_ble.c  comms_uart.c
project/src/modules/sensor/: sensor_module.c
